--- a/src/sass_styles/sass/design.scss
+++ b/src/sass_styles/sass/design.scss
@@ -1,3 +1,18 @@
+@import 'mixins';
+
+$bkg_color: #5F9EA0;
+$title_color :#808080;
+
 body{
-    background-color : grey;
+    background-color: $bkg_color;
 }
+
+
+#title {
+    color: $title_color;
+    
+}
+
+// .display-2 {
+//     color: #8B008B;
+// }
